--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <figcaption>Inspark</figcaption>
                 </figure>
                 <div class="external-card-bt">
-                    <a href="https://joeinspark.netlify.com" target="_blank">Live Site <i class="fas fa-link"></i> </a>
+                    <a href="https://ayiamco.github.io/inspark/" target="_blank">Live Site <i class="fas fa-link"></i> </a>
                     <a href="">Github Repo <i class="fas fa-link"></i></a>
                 </div>
             </div> 
